added kanopy tests for basic view usage; reshuffled urls for plotter and kanopy apps

--- a/kanopy/templates/kanopy/kanopy_graph.html
+++ b/kanopy/templates/kanopy/kanopy_graph.html
@@ -202,13 +202,13 @@
 
     <div class="fluid-row" id="header">
 
-      <h2 class="title toc-ignore">Green CovR: Tracking cover crop growth across Minnesota</h1>
-        <h5><a href="{% url 'kanopy_home' %}">Back to Green Covr home page</a></h5>
-        <h5><a href="https://mosh.umn.edu" target="_blank" rel="noopener noreferrer">Minnesota Office for Soil
-            Health</a></h5>
-        <h4 class="date">September, 2022</h4>
-        <h5 class="author">Anna Cates, <a href="mailto:catesa@umn.edu">catesa@umn.edu</a></h5>
-        <h5 class="author">Marcelle Lewandowski, <a href="mailto:alewand@umn.edu">alewand@umn.edu</a></h5>
+      <h2 class="title toc-ignore">Green CovR: Tracking cover crop growth across Minnesota</h2>
+      <h5><a href="{% url 'kanopy_home' %}">Back to Green Covr home page</a></h5>
+      <h5><a href="https://mosh.umn.edu" target="_blank" rel="noopener noreferrer">Minnesota Office for Soil
+          Health</a></h5>
+      <h4 class="date">September, 2022</h4>
+      <h5 class="author">Anna Cates, <a href="mailto:catesa@umn.edu">catesa@umn.edu</a></h5>
+      <h5 class="author">Marcelle Lewandowski, <a href="mailto:alewand@umn.edu">alewand@umn.edu</a></h5>
 
     </div>
 
@@ -223,9 +223,10 @@
         how much of a given photograph is green. You can see the individual photos by clicking
         on those points on the <a href="{% url 'green_covr_submission_map' %}">map</a>.</p>
 
-      <p><b>Data exploration:</b> Below, you can browse the data by planting date, <a
-          href="{% url 'green_covr_references' %}">total growing degree days</a> (an estimate of how much good crop
-        growing weather the cover crop experienced), or seeding rate. We'd expect more green cover when planting date is
+      <p><b>Data exploration:</b> Below, you can browse the data by planting date,
+        <a href="{% url 'green_covr_references' %}"> total growing degree days</a>
+        (an estimate of how much good crop growing weather the cover crop experienced), or seeding rate. We'd expect
+        more green cover when planting date is
         earlier, seeding rate is higher, or there are more growing degree days, but the data don't show a clear linear
         trend. Although some crops with more time to grow did better, there's a lot of variability we can't explain.
         This might be due to planting conditions (soil, weather, residue) as well as management decisions.
