--- a/wisccc/templates/wisccc/wisc_cc_map.html
+++ b/wisccc/templates/wisccc/wisc_cc_map.html
@@ -13,7 +13,7 @@ https://datadrivensecurity.info/blog/vis/malmaps-d3/
 
 <head>
     <meta charset="utf-8">
-    <title>{% block title %}Green Covr Map{% endblock %}</title>
+    <title>{% block title %}Wisconsin Citizen Science Cover Crop Map{% endblock %}</title>
     <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/app.css' %}">
@@ -61,12 +61,34 @@ https://datadrivensecurity.info/blog/vis/malmaps-d3/
 <link rel="stylesheet" href="{% static 'css/L.Control.Window.css' %}" />
 <div id="mapid"></div>
 
+<div id="ctrl_inner_html">
+    <img width="200" height="100" src="/static/img/MoshStacked_maroon.png" /><br><br>
+
+    <h5>Set filters</h5>
+    <span>Year
+        <select id="YearFilter" class="YearSelector">
+        </select>
+    </span><br>
+    <span>Soil texture
+        <select id="SoilTextFilter" class="SoilSelector">
+        </select>
+    </span><br>
+    <span>Seeding method
+        <select id="SeedingFilter" class="SeedingSelector">
+        </select>
+    </span><br>
+    <h5>Select property</h5>
+    <select id="PropertySelection" class="PropSelector">
+        <option value="cc_biomass">Cover crop biomass</option>
+        <option value="fq_rfq">Relative forage quality</option>
+        <option value="gdd">Growing degree days</option>
+    </select>
+    <div id="legend"><svg width="260px" height="200px"></svg></div><button id="info-button">Info</button>
+</div>
 
 <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 <script>
 
-
-    var pct_formatter = d3.format(".1%");
 
     mapLink =
         '<a href="http://www.esri.com/">Esri</a>';
@@ -151,7 +173,7 @@ https://datadrivensecurity.info/blog/vis/malmaps-d3/
             controlsdiv.style.height = '500px';
             controlsdiv.style.background = 'white';
             controlsdiv.id = "controls";
-            controlsdiv.innerHTML = '<img width="200" height="100" src="/static/img/MoshStacked_maroon.png"/><br><br><h5>Select property</h5><select id="PropertySelection" class="PropSelector"><option value="fgcc_value">Percent Green Cover</option><option value="gdd">Growing degree days</option></select><div id="legend"><svg width="260px" height="200px"></svg></div><button id="info-button">Info</button>';
+            controlsdiv.innerHTML = ''
 
 
             $(controlsdiv).mousedown(function () {
@@ -212,40 +234,149 @@ https://datadrivensecurity.info/blog/vis/malmaps-d3/
 
     var geojsonObject;
     var soilsLayer;
-    var soilsPoints = [];
+
     var soilsCircle = $.getJSON(dataurl, function (data) {
         soilsLayer = data;
-        geojsonObject = L.geoJSON(data, {
-            pointToLayer: function (feature, latlng) {
-                soilsPoints.push(latlng);
-                return L.circleMarker(latlng, geojsonMarkerOptions);
-            },
-            pane: "pane_collection_pts",
-            onEachFeature: onEachFeature
-        }).addTo(map);
-        //map.fitBounds(soilsPoints);
-        geojsonObject.eachLayer(function (layer) {
-            layer.setStyle({ fillColor: gddScale(layer.feature.properties.acc_gdd) })
-            updateLegend(gddScale, pct = false)
-        })
+
+        // geojsonObject = L.geoJSON(data, {
+        //     pointToLayer: function (feature, latlng) {
+        //         soilsPoints.push(latlng);
+        //         return L.circleMarker(latlng, geojsonMarkerOptions);
+        //     },
+        //     //filter: yearFilter,
+        //     pane: "pane_collection_pts",
+        //     onEachFeature: onEachFeature
+        // }).addTo(map);
+        // //map.fitBounds(soilsPoints);
+        // geojsonObject.eachLayer(function (layer) {
+        //     layer.setStyle({ fillColor: gddScale(layer.feature.properties.acc_gdd) })
+        //     updateLegend(gddScale, ".0f")
+        // })
+
+        pop_select_box("YearFilter", "year");
+        pop_select_box("SeedingFilter", "cc_seeding_method");
+        pop_select_box("SoilTextFilter", "dominant_soil_texture");
+        filterer();
+        addLayerToMap();
     });
 
+    // for populating select boxes
+    var pop_select_box = function (id_selector, field_name) {
+        var all_instances = [];
+        for (item in soilsLayer) {
+
+            all_instances.push(soilsLayer[item]['properties'][field_name])
+
+        }
+        const uniq_instances = [...new Set(all_instances)];
+        var filt = document.getElementById(id_selector);
+        var newOption = document.createElement("option");
+        newOption.text = "All";
+        newOption.value = "All";
+        filt.add(newOption);
+        uniq_instances.forEach(function (item) {
+            console.log(item)
+            if (item === null) { return }
+            var newOption = document.createElement("option");
+            newOption.text = item.toString();
+            newOption.value = item.toString();
+            filt.add(newOption);
+        })
+    }
+    let filter_values;
+
+    var filterer = function (feature) {
+        filter_values = {
+            year: false,
+            seeding_method: false,
+            soil_texture: false,
+        }
+        if (document.getElementById("YearFilter").value == "All") {
+            filter_values['year'] = document.getElementById("YearFilter").value;
+        } else {
+            filter_values['year'] = parseInt(document.getElementById("YearFilter").value);
+        }
+
+        filter_values['cc_seeding_method'] = document.getElementById("SeedingFilter").value;
+        filter_values['dominant_soil_texture'] = document.getElementById("SoilTextFilter").value;
 
 
+    }
+
+
+    function addLayerToMap() {
+        //remove the layer from the map entirely
+        if (map.hasLayer(geojsonObject)) {
+            geojsonObject.remove();
+        }
+        //add the data layer and style based on attribute. 
+
+        geojsonObject = L.geoJson(soilsLayer, {
+
+            filter: (feature) => {
+
+                // Filter each property by the selected filter value
+                // If no filter, the 'All' option, then the filter value is true, hence the or statement
+                const filt_year = (filter_values.year == "All") ? true : (feature.properties.year == filter_values.year);
+                const filt_seeding = (filter_values.cc_seeding_method == "All") ? true : (feature.properties.cc_seeding_method == filter_values.cc_seeding_method);
+                const filt_soiltext = (filter_values.dominant_soil_texture == "All") ? true : (feature.properties.dominant_soil_texture == filter_values.dominant_soil_texture);
+
+                return filt_year && filt_seeding && filt_soiltext //only true if both are true
+            },
+
+            pointToLayer: function (feature, latlng) {
+                return new L.CircleMarker(latlng, geojsonMarkerOptions);
+            },
+            onEachFeature: onEachFeature,
+            style: function (feature) {
+                updateLegend(biomassScale, ".1f");
+                return {
+
+                    fillColor: biomassScale(feature.properties.cc_biomass)
+                };
+            },
+        }).addTo(map);
+        console.log(Object.keys(geojsonObject._layers).length + " locations after filtering.")
+    }
+
+    $("#YearFilter").on("input", function () {
+        filterer()
+        //add the layer to the map again, now that we have changed the filter value. 
+        addLayerToMap();
+    });
+    $("#SeedingFilter").on("input", function () {
+        filterer()
+        //add the layer to the map again, now that we have changed the filter value. 
+        addLayerToMap();
+    });
+    $("#SoilTextFilter").on("input", function () {
+        filterer()
+        //add the layer to the map again, now that we have changed the filter value. 
+        addLayerToMap();
+    });
 
     function updateStyle(property) {
         geojsonObject.eachLayer(function (layer) {
             if (property == "gdd") {
-                layer.setStyle({ fillColor: gddScale(layer.feature.properties.gdd) })
-                updateLegend(gddScale, pct = false)
-            } else if (property == "fgcc_value") {
-                layer.setStyle({ fillColor: fgccScale(layer.feature.properties.fgcc_value) })
-                updateLegend(fgccScale, pct = true)
+                layer.setStyle({ fillColor: gddScale(layer.feature.properties.acc_gdd) })
+                updateLegend(gddScale, ".0f")
+            } else if (property == "cc_biomass") {
+                layer.setStyle({ fillColor: biomassScale(layer.feature.properties.cc_biomass) })
+                updateLegend(biomassScale, ".1f")
+            } else if (property == "fq_rfq") {
+                layer.setStyle({ fillColor: rfqScale(layer.feature.properties.fq_rfq) })
+                updateLegend(rfqScale, ".0f")
             }
         })
     }
 
     //Maybe this: https://github.com/timwis/leaflet-choropleth
+
+    var rfqScale = d3.scaleThreshold()
+        .domain([100, 150, 200, 250, 300, 350])
+        .range(d3.schemeGreens[7]);
+
+
 
     var gddScale = d3.scaleThreshold()
         .domain([500, 1000, 1500, 2000, 2500, 3000, 4000])
@@ -256,12 +387,16 @@ https://datadrivensecurity.info/blog/vis/malmaps-d3/
         .domain([0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9])
         .range(d3.schemeGreens[7]);
 
+    var biomassScale = d3.scaleThreshold()
+        .domain([0.5, 1, 1.5, 2, 2.5, 3, 3.5])
+        .range(d3.schemePuOr[7]);
+
 
     function removeLegend(legendClassName) {
         d3.select(legendClassName).remove();
     }
 
-    function updateLegend(myscale, pct = true) {
+    function updateLegend(myscale, fmt_string) {
 
         removeLegend('.legendSoil');
 
@@ -282,13 +417,7 @@ https://datadrivensecurity.info/blog/vis/malmaps-d3/
 
         legendSoil.labels(d3.legendHelpers.thresholdLabels)
 
-
-        if (pct) {
-            legendSoil.labelFormat(d3.format(".0%"))
-        } else {
-            legendSoil.labelFormat(d3.format(".0f"))
-
-        }
+        legendSoil.labelFormat(d3.format(fmt_string))
 
         svg.select(".legendSoil")
             .call(legendSoil);
@@ -321,6 +450,8 @@ https://datadrivensecurity.info/blog/vis/malmaps-d3/
                 visible: true
             })
     }
+    // Moves map controls to proper spot
+    document.getElementById("controls").appendChild(document.getElementById('ctrl_inner_html'))
 </script>
 
 
