updated titles to pages; made embeddable map and allowed iframe

--- a/wisccc/templates/wisccc/wisc_cc_graph.html
+++ b/wisccc/templates/wisccc/wisc_cc_graph.html
@@ -14,7 +14,7 @@
 
     <meta name="date" content="2022-09-01" />
 
-    <title>Green CovR Data Summary</title>
+    <title>Wisconsin Citizen Science Cover Crop Project</title>
     <!-- Deleted Script -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Delete stylesheet -->
@@ -241,7 +241,7 @@
 
         </div>
 
-        <div id="data-collection" class="section level2">
+        <div id=" data-collection" class="section level2">
 
             <div class="figure" style="text-align: center">
 
