--- a/wisccc/templates/wisccc/wisc_cc_map_toggle.html
+++ b/wisccc/templates/wisccc/wisc_cc_map_toggle.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="title" content="cgms-be" />
     <meta name="robots" content="index,follow" />
-    <meta name="author" content="EvansGeospatial" />
+    <meta name="author" content="Evans Geospatial" />
     <!-- <link rel="stylesheet" href="lib/bootstrap-3.3.6-dist/css/bootstrap.css"> -->
     <!-- debug css version-->
     <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
@@ -158,7 +158,7 @@
 
 
 
-    <title>{% block title %}Wisconsin Citizen Science Cover Crop Map{% endblock %}</title>
+    <title>Wisconsin Citizen Science Cover Crop Project</title>
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" />
 
@@ -207,7 +207,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Wisconsin Cover Crop Project</a>
+            <a class="navbar-brand" href="#">Wisconsin Citizen Science Cover Crop Project</a>
         </div>
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav">
