--- a/wisccc/templates/wisccc/wisc_cc_map_toggle.html
+++ b/wisccc/templates/wisccc/wisc_cc_map_toggle.html
@@ -246,6 +246,10 @@
                             <select id="SoilTextFilter" class="SoilSelector">
                             </select>
                         </span><br>
+                        <span>Tillage type
+                            <select id="TillageFilter" class="TillageSelector">
+                            </select>
+                        </span><br>
                         <span>Seeding method
                             <select id="SeedingFilter" class="SeedingSelector">
                             </select>
@@ -253,6 +257,15 @@
                         <span>Cover Crop Species
                             <select id="SpeciesFilter" class="SpeciesSelector">
                             </select>
+                        </span>
+
+                        <span>Manure applied prior to cover crop
+                            <input type="checkbox" id="PriorManFilter" class="PreManSelector">
+                        </span>
+
+                        <span>Manure applied post cover crop establishment
+                            <input type="checkbox" id="PostManFilter" class="PreManSelector">
+
                         </span>
 
 
@@ -452,6 +465,8 @@
             pop_select_box(soilsLayer, "YearFilter", "year");
             pop_select_box(soilsLayer, "SeedingFilter", "cc_seeding_method");
             pop_select_box(soilsLayer, "SoilTextFilter", "dominant_soil_texture");
+            pop_select_box(soilsLayer, "TillageFilter", "residue_remaining");
+
 
             filterer();
             addLayerToMap();
@@ -487,7 +502,10 @@
                 year: false,
                 seeding_method: false,
                 soil_texture: false,
-                cc_species: false
+                cc_species: false,
+                residue_remaining: false,
+                manure_prior: false,
+                manure_post: false
             }
             if (document.getElementById("YearFilter").value == "All") {
                 filter_values['year'] = document.getElementById("YearFilter").value;
@@ -498,6 +516,9 @@
             filter_values['cc_seeding_method'] = document.getElementById("SeedingFilter").value;
             filter_values['dominant_soil_texture'] = document.getElementById("SoilTextFilter").value;
             filter_values['cc_species'] = document.getElementById("SpeciesFilter").value;
+            filter_values['residue_remaining'] = document.getElementById("TillageFilter").value;
+            filter_values['manure_prior'] = prior_manure;
+            filter_values['manure_post'] = post_manure;
 
 
         }
@@ -520,8 +541,11 @@
                     const filt_seeding = (filter_values.cc_seeding_method == "All") ? true : (feature.properties.cc_seeding_method == filter_values.cc_seeding_method);
                     const filt_soiltext = (filter_values.dominant_soil_texture == "All") ? true : (feature.properties.dominant_soil_texture == filter_values.dominant_soil_texture);
                     const filt_species = (filter_values.cc_species == "All") ? true : (feature.properties.cc_species == filter_values.cc_species);
+                    const filt_till = (filter_values.residue_remaining == "All") ? true : (feature.properties.residue_remaining == filter_values.residue_remaining);
+                    const filt_priorman = (filter_values.manure_prior == false) ? true : (feature.properties.manure_prior == "Yes");
+                    const filt_postman = (filter_values.manure_post == false) ? true : (feature.properties.manure_post == "Yes");
 
-                    return filt_year && filt_seeding && filt_soiltext && filt_species //only true if both are true
+                    return filt_year && filt_seeding && filt_soiltext && filt_species && filt_till && filt_priorman && filt_postman //only true if both are true
                 },
 
                 pointToLayer: function (feature, latlng) {
@@ -556,6 +580,34 @@
             addLayerToMap();
         });
         $("#SpeciesFilter").on("input", function () {
+            filterer()
+            //add the layer to the map again, now that we have changed the filter value. 
+            addLayerToMap();
+        });
+        $("#TillageFilter").on("input", function () {
+            filterer()
+            //add the layer to the map again, now that we have changed the filter value. 
+            addLayerToMap();
+        });
+        let prior_manure = false;
+        $("#PriorManFilter").on("input", function () {
+            if (prior_manure == true) {
+                prior_manure = false;
+            } else {
+                prior_manure = true;
+            }
+            console.log(prior_manure)
+            filterer()
+            //add the layer to the map again, now that we have changed the filter value. 
+            addLayerToMap();
+        });
+        let post_manure = false;
+        $("#PostManFilter").on("input", function () {
+            if (post_manure == true) {
+                post_manure = false;
+            } else {
+                post_manure = true;
+            }
             filterer()
             //add the layer to the map again, now that we have changed the filter value. 
             addLayerToMap();
