fixed small formatting issue with checkboxes

--- a/wisccc/templates/wisccc/wisc_cc_graph.html
+++ b/wisccc/templates/wisccc/wisc_cc_graph.html
@@ -283,11 +283,11 @@
                         </select> <br>
 
                         Manure applied prior to cover crop
-                        <input type="checkbox" id="checkbox_manure_prior" class="group-select">
+                        <input type="checkbox" id="checkbox_manure_prior" class="group-select"> <br>
 
 
                         Manure applied post cover crop establishment
-                        <input type="checkbox" id="checkbox_manure_post" class="group-select">
+                        <input type="checkbox" id="checkbox_manure_post" class="group-select"> <br>
 
                     </div>
                     <div class="col-md-4" id="color_changer">
