--- a/wisccc/templates/wisccc/wisc_cc_map_toggle.html
+++ b/wisccc/templates/wisccc/wisc_cc_map_toggle.html
@@ -257,15 +257,14 @@
                         <span>Cover Crop Species
                             <select id="SpeciesFilter" class="SpeciesSelector">
                             </select>
-                        </span>
+                        </span><br>
 
                         <span>Manure applied prior to cover crop
                             <input type="checkbox" id="PriorManFilter" class="PreManSelector">
-                        </span>
+                        </span><br>
 
                         <span>Manure applied post cover crop establishment
                             <input type="checkbox" id="PostManFilter" class="PreManSelector">
-
                         </span>
 
 
