--- a/wisccc/templates/wisccc/wisc_cc_graph.html
+++ b/wisccc/templates/wisccc/wisc_cc_graph.html
@@ -206,8 +206,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"></script>
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     <script type="text/javascript" src='{% static "js/wisccc_legend.js" %}'></script>
+    <script type="text/javascript"
+        src='https://cdnjs.cloudflare.com/ajax/libs/regression/2.0.1/regression.min.js'></script>
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+
     <nav class="navbar navbar-fixed-top header" role="navigation">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
@@ -289,6 +292,9 @@
                         Manure applied post cover crop establishment
                         <input type="checkbox" id="checkbox_manure_post" class="group-select"> <br>
 
+                        Add linear regression line
+                        <input type="checkbox" id="checkbox_linreg_line" class="group-select"> <br>
+
                     </div>
                     <div class="col-md-4" id="color_changer">
                         <select id="select_color" class="group-select">
@@ -367,6 +373,7 @@
         }
         var dataurl = '/wisc_cc_static_data';
         var submission_data;
+        var model_data;
 
         d3.json(dataurl, function (data) {
             submission_data = data;
@@ -408,6 +415,9 @@
                 //data[i].properties.cc_planting_date_flat;
                 // console.log("Planting date before flat: " + cov_crop_planting_date)
 
+                //Julian day calc
+                data[i].properties.julian_day = calcJulianDay(data[i].properties.cc_planting_date)
+
                 if (cov_crop_planting_date.getFullYear() == min_year) {
                     data[i].properties.cc_planting_date_flat = data[i].properties.cc_planting_date;
                     continue;
@@ -415,7 +425,7 @@
                 var year_diff = cov_crop_planting_date.getFullYear() - min_year;
                 cov_crop_planting_date.setFullYear(cov_crop_planting_date.getFullYear() - year_diff);
 
-                // console.log("Planting date after: " + cov_crop_planting_date)
+
                 data[i].properties.cc_planting_date_flat = cov_crop_planting_date
 
             }
@@ -477,6 +487,8 @@
             var yAxis = d3.axisLeft(yScale);
             yAxis.ticks(10, ".1f")
 
+
+
             svg.append("g")
                 .call(yAxis)
                 .attr("class", "myYAxis")
@@ -511,7 +523,6 @@
                     .attr("cx", function (d) { return scale(d.properties[property]); })
                     .attr("cy", function (d) { return yScale(d.properties.cc_biomass); })
                     .attr("r", 3)
-
                     .style("fill", function (d) { return color_scale((d.properties[color_property])); })
                     .style("stroke", "#252525")
                     .on("mouseover", function (d) {
@@ -531,7 +542,20 @@
                             .style("opacity", 0);
                     });
 
-
+                // For regression line
+                svg.selectAll(".line").remove();
+                if (document.getElementById('checkbox_linreg_line').checked) {
+                    svg.append("path")
+                        .datum(data)
+                        .attr("class", "line")
+                        .attr("fill", "none")
+                        .attr("stroke", "steelblue")
+                        .attr("stroke-width", 1.5)
+                        .attr("d", d3.line()
+                            .x(function (d) { return scale(d.properties[property]); })
+                            .y(function (d) { return yScale(d.properties.predicted); })
+                        )
+                }
             }
 
             function updatePoints(data, property_and_scale) {
@@ -545,6 +569,7 @@
                     .attr("cx", function (d) { return scale(d.properties[property]); })
                     .attr("cy", function (d) { return yScale(d.properties.cc_biomass); })
                     .style("fill", function (d) { return color_scale((d.properties[color_property])); })
+
 
                 svg.select(".myXAxis")
                     .transition()
@@ -578,6 +603,79 @@
                     .data(data)
                     .exit()
                     .remove();
+
+            }
+
+            function calcJulianDay(target_date) {
+
+                var start = new Date(target_date.getFullYear(), 0, 0);
+                var diff = target_date - start;
+                var oneDay = 1000 * 60 * 60 * 24;
+                var day = Math.floor(diff / oneDay);
+
+                return day
+            }
+
+            function getDataForModel(data, xproperty) {
+
+
+                let mod_data = [];
+                for (let i = 0; i < data.length; i++) {
+
+                    var y = data[i].properties.cc_biomass;
+                    if (y === null) { continue }
+
+                    var x = data[i].properties[xproperty];
+                    if (x === null) { continue }
+
+                    mod_data.push([x, y])
+
+                }
+
+                var n_removed = 99 - mod_data.length
+                console.log(n_removed, " values were removed")
+                console.log(mod_data)
+                for (let i = 0; i < mod_data.length; i++) {
+                    if (mod_data[i][0] == undefined) {
+
+                    }
+                }
+                return mod_data;
+            }
+
+            function fitModel(mod_data, type = "linear") {
+
+                if (type == "linear") {
+
+                    var rslt = regression.linear(
+                        // Using precision to 5 because fit is usually so bad as to be nearly zero
+                        mod_data, { 'precision': 5 }
+                    )
+
+                    return rslt
+                }
+
+            }
+
+            function addRegressionLine(data) {
+
+                var xproperty = getScaleAndProperty(data)[0];
+                if (xproperty == "cc_planting_date_flat") {
+                    xproperty = "julian_day"
+                }
+
+                var data_for_model = getDataForModel(data, xproperty)
+
+                var model_result = fitModel(data_for_model)
+                console.log(model_result.string)
+                for (let i = 0; i < data.length; i++) {
+
+                    data[i].properties.predicted = model_result.predict(data[i].properties[xproperty])[1]
+
+                }
+
+                return data
+
             }
 
             function getFilteredData(data) {
@@ -596,6 +694,7 @@
 
                 filtered_data = filterDataManurePost(filtered_data)
 
+                filtered_data = addRegressionLine(filtered_data)
 
                 return filtered_data;
 
@@ -629,7 +728,6 @@
                     return d.properties.cc_seeding_method == seeding_method;
                 });
             }
-
 
             function filterDataManurePrior(data) {
 
@@ -774,6 +872,14 @@
                 console.log("Changed to: " + this.value)
                 updateChart(false);
 
+            })
+
+
+
+            d3.select("#checkbox_linreg_line").on("change", function () {
+
+
+                updateChart(false);
             })
 
 
