--- a/wisccc/templates/wisccc/wisc_cc_map_toggle.html
+++ b/wisccc/templates/wisccc/wisc_cc_map_toggle.html
@@ -374,15 +374,16 @@
 
             var biomass_val = (biomass_val === null) ? null : roundUp(feature.properties.cc_biomass, 2);
             var popupContent = "<dl>" +
-                "<dt>ID</dt> <dd>" + feature.id + "</dd>" +
+                // "<dt>ID</dt> <dd>" + feature.id + "</dd>" +
                 "<dt>Cover crop</dt> <dd>" + feature.properties.cc_species + "</dd>" +
+                "<dt>Cover Crop Species and Seeding Rate</dt> <dd>" + feature.properties.cc_species + "<br>" + feature.properties.cc_planting_rate + "</dd>" +
                 "<dt>Previous crop</dt> <dd>" + feature.properties.previous_crop.toLowerCase().replace("_", " ") + "</dd>" +
                 "<dt>Planting date</dt> <dd>" + planting_date + "</dd>" +
-                "<dt>Planting info</dt> <dd>" + feature.properties.cc_planting_rate + "</dd>" +
                 "<dt>Dominant soil texture</dt> <dd>" + feature.properties.dominant_soil_texture + "</dd>" +
                 "<dt>Biomass (ton DM/acre)</dt> <dd>" + biomass_val + "</dd>" +
                 "<dt>Cumulative growing degree days</dt> <dd>" + feature.properties.acc_gdd + "</dd>" +
-                "</dl>" + "*This point is not the actual location of the photo. Collection locations have been obscured to protect landowner's privacy.";
+                "</dl>" +
+                "*This point is not the actual location of the farm. Locations have been obscured to protect landowner's privacy.";
 
 
             if (feature.properties && feature.properties.popupContent) {
