--- a/wisccc/templates/wisccc/wisc_cc_graph.html
+++ b/wisccc/templates/wisccc/wisc_cc_graph.html
@@ -252,14 +252,14 @@
 
                 <div class="row">
                     <div class="col-md-2" id="legend">
-                        <br>
+                        <!-- <br>
                         <b>
                             <select id="select_color" class="group-select">
                                 <option value="region" selected>NOAA Climate Regions</option>
                                 <option value="cc_species">Cover crop species</option>
                                 <option value="previous_crop">Cash crop prior</option>
                             </select>
-                        </b>
+                        </b> -->
                         <svg width="200px" height="250px"></svg>
                     </div>
                     <div class="col-md-8" id="my_dataviz">
@@ -309,11 +309,11 @@
 
                     </div>
                     <div class="col-md-4" id="color_changer">
-                        <!-- <select id="select_color" class="group-select">
+                        <select id="select_color" class="group-select">
                             <option value="region" selected>Region</option>
                             <option value="cc_species">Cover crop species</option>
                             <option value="previous_crop">Cash crop prior</option>
-                        </select> <br> -->
+                        </select> <br>
                     </div>
                     <div class="col-md-3" id="x_axis_changer">
 
