fixed navbar opacity issue

--- a/wisccc/templates/wisccc/wisc_cc_graph.html
+++ b/wisccc/templates/wisccc/wisc_cc_graph.html
@@ -121,6 +121,10 @@
     <!-- tabsets -->
 
     <style type="text/css">
+        .navbar-fixed-top {
+            background: white;
+        }
+
         .tabset-dropdown>.nav-tabs {
             display: inline-table;
             max-height: 500px;
